code25_all/python/1510609.txt
import re
s = "aa67bc54c9"
for t, n in re.findall(r"([a-z]+)([0-9]+)", s)

  File "<stdin>", line 1
    for t, n in re.findall(r"([a-z]+)([0-9]+)", s)
                                                 ^
SyntaxError: invalid syntax

